# taskfile

./: .gitignore  .mdo_context.json  CMakeLists.txt  README.md  Taskfile  context.py  dispatch.py  main.py
cmd/: add.py  create.py  init.py  list.py
src/: args.h  cmd-config.h  cmd-create.c  cmd-create.h  cmd-init.c  cmd-init.h  defines.h  dispatch.c  dispatch.h  main.c  messages.c  messages.h  tfile_context.c  tfile_context.h  utils-file.c  utils-file.h  utils_file.h
utils/: file.py  messages.py
